--- a/src/Sample.Azure.Translator.App/Properties/launchSettings.json
+++ b/src/Sample.Azure.Translator.App/Properties/launchSettings.json
@@ -1,10 +1,11 @@
 {
   "profiles": {
     "Sample.Azure.Translator.App": {
-      "commandName": "Project",
+        "commandName": "Project",
         "environmentVariables": {
-            "DOTNET_Environment": "Development"      
-        }
+            "DOTNET_Environment": "Development"
+        },
+        "commandLineArgs": "D:\\repos\\Sample.Azure.Translator\\samples\\sample.html --html --from=en --to=ko,es,ja,ru"
     }
   }
 }
