--- a/src/Sample.Azure.Translator.App/Sample.Azure.Translator.App.csproj
+++ b/src/Sample.Azure.Translator.App/Sample.Azure.Translator.App.csproj
@@ -25,4 +25,9 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sample.Azure.Translator.Services\Sample.Azure.Translator.Services.csproj" />
+    <ProjectReference Include="..\Sample.Azure.Translator\Sample.Azure.Translator.csproj" />
+  </ItemGroup>
+
 </Project>
