--- a/src/Sample.Azure.Translator.Webapp/appsettings.json
+++ b/src/Sample.Azure.Translator.Webapp/appsettings.json
@@ -1,10 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Translator": {
+        "Endpoint": "endpoint here",
+        "SubscriptionKey": "subscription key here",
+        "Region": "region here"
+    },
+    "AzureStorage": {
+        "ConnectionString": "azure storage connection string here"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
