--- a/src/Sample.Azure.Translator.Webapp/appsettings.json
+++ b/src/Sample.Azure.Translator.Webapp/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "App": {
+        "Title": "Sample for Azure translator"
+    },
     "Translator": {
         "Endpoint": "endpoint here",
         "SubscriptionKey": "subscription key here",
