--- a/src/Sample.Azure.Translator.Webapp/appsettings.json
+++ b/src/Sample.Azure.Translator.Webapp/appsettings.json
@@ -5,7 +5,8 @@
     "Translator": {
         "Endpoint": "endpoint here",
         "SubscriptionKey": "subscription key here",
-        "Region": "region here"
+        "Region": "region here",
+        "ResourceName": "name of resource"
     },
     "AzureStorage": {
         "ConnectionString": "azure storage connection string here"
