--- a/src/Sample.Azure.Translator.App/appsettings.json
+++ b/src/Sample.Azure.Translator.App/appsettings.json
@@ -2,7 +2,8 @@
     "Translator": {
         "Endpoint": "endpoint here",
         "SubscriptionKey": "subscription key here",
-        "Region": "region here"
+        "Region": "region here",
+        "ResourceName": "name of resource"
     },
     "Logging": {
         "LogLevel": {
