--- a/src/Sample.Azure.Translator.Webapp/Sample.Azure.Translator.Webapp.csproj
+++ b/src/Sample.Azure.Translator.Webapp/Sample.Azure.Translator.Webapp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,13 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="kr.bbon.AspNetCore" Version="1.0.0" />
+    <PackageReference Include="kr.bbon.Azure.Translator.Services" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\kr.bbon.Azure.Translator.Services\kr.bbon.Azure.Translator.Services.csproj" />
     <ProjectReference Include="..\Sample.Azure.Translator\Sample.Azure.Translator.csproj" />
   </ItemGroup>
 
