To resolve document translation server error
- use container SAS URI for source, target

--- a/src/Sample.Azure.Translator.Webapp/appsettings.json
+++ b/src/Sample.Azure.Translator.Webapp/appsettings.json
@@ -6,7 +6,9 @@
         "Endpoint": "endpoint here",
         "SubscriptionKey": "subscription key here",
         "Region": "region here",
-        "ResourceName": "name of resource"
+        "ResourceName": "name of resource",
+        "SourceBlobContainerName": "source",
+        "TargetBlobContainerName": "target"
     },
     "AzureStorage": {
         "ConnectionString": "azure storage connection string here"
