--- a/src/Sample.Azure.Translator.Webapp/Sample.Azure.Translator.Webapp.csproj
+++ b/src/Sample.Azure.Translator.Webapp/Sample.Azure.Translator.Webapp.csproj
@@ -7,14 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Azure.AI.Translation.Document" Version="1.0.0-beta.3" />
     <PackageReference Include="kr.bbon.AspNetCore" Version="1.1.0" />
-    <!--<PackageReference Include="kr.bbon.Azure.Translator.Services" Version="1.0.5" />-->
+    <PackageReference Include="kr.bbon.Azure.Translator.Services" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\kr.bbon.Azure.Translator.Services\src\kr.bbon.Azure.Translator.Services\kr.bbon.Azure.Translator.Services.csproj" />
     <ProjectReference Include="..\Sample.Azure.Translator\Sample.Azure.Translator.csproj" />
   </ItemGroup>
 
